# tasks

./: .gitignore  README.md  dev.env  pyproject.toml
src/: __init__.py
src/database/: __init__.py
src/models/: __init__.py  tasks.py
src/services/: __init__.py  csv_manager.py
src/tasks/: __init__.py
src/tasks_csv/: __init__.py
src/toudou/models/: __init__.py  model.py
src/toudou/services/: __init__.py  csv_manager.py
src/toudou/views/: __init__.py  cli.py
src/toudou/views/web/: __init__.py  app.py
src/toudou/views/web/static/: style.css  style.scss  tasks.css  tasks.scss
src/toudou/views/web/templates/: index.html  tasks.html
src/views/: __init__.py  cli.py
src/views/web/: __init__.py  app.py
src/views/web/static/: style.css  tasks.css  tasks.scss
src/views/web/templates/: index.html  tasks.html
src/views/web/templates/partials/: header.html
