[project]
name = "tasks"
version = "0.2.0"
description = "Todo list application"
authors = [
    {name = "444chak", email = "444chak@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
    "sqlalchemy>=2.0.29",
    "flask>=3.0.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
tasks = "toudou.views.cli:cli" # reference to cli() function in the __init__.py file in tasks (views) package
toudou = "toudou.views.cli:cli" # reference to cli() function in the __init__.py file in tasks (views) package
web = "toudou.views.web:run" # reference to __init__.py file in web package who launches the web app using Flask 
webd = "toudou.views.web:rund" # reference to __init__.py file in web package who launches the web app using Flask in debug mode

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

